--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,8 @@
     "vendor/font-awesome/brands",
     "vendor/magnific-popup/magnific-popup"
 ;
+
+// Override global font size
+body {
+  font-size: 18px;
+}
